<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/logotenda"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pokeball"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/black"></TextView>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pokeball"></ImageView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/textP"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:singleLine="true"
                        android:imeOptions="actionDone"></EditText>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">
                        <Button
                            android:id="@+id/boto_mesP"
                            android:text="@string/mas"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="-1dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:background="@drawable/rectanglered"/>
                        <Button
                            android:id="@+id/boto_menysP"
                            android:text="@string/menos"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/rectanglered"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/text_superball"
                    android:textStyle="bold"></TextView>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/superball"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/textS"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:singleLine="true"
                        android:imeOptions="actionDone"></EditText>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">
                        <Button
                            android:id="@+id/boto_mesS"
                            android:text="@string/mas"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="-1dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:background="@drawable/rectangleblue"/>
                        <Button
                            android:id="@+id/boto_menysS"
                            android:text="@string/menos"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/rectangleblue"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ultraball"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"></TextView>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ultraball"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/textU"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:singleLine="true"
                        android:imeOptions="actionDone"></EditText>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">
                        <Button
                            android:id="@+id/boto_mesU"
                            android:text="@string/mas"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="-1dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:background="@drawable/rectangleyel"/>
                        <Button
                            android:id="@+id/boto_menysU"
                            android:text="@string/menos"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/rectangleyel"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="230dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_masterball"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/masterball"></ImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textM"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buy"
                    android:singleLine="true"
                    android:imeOptions="actionDone"></EditText>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp">
                    <Button
                        android:id="@+id/boto_mesM"
                        android:text="@string/mas"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="-1dp"
                        android:gravity="center"
                        android:padding="0dp"
                        android:textColor="@color/white"
                        android:background="@drawable/rectanglepur"/>
                    <Button
                        android:id="@+id/boto_menysM"
                        android:text="@string/menos"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:padding="0dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/rectanglepur"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="600dp"
            android:layout_height="400dp"
            android:layout_marginLeft="-60dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/grass"></ImageView>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_marginTop="-580dp"
            android:layout_marginLeft="-5dp"
            android:src="@drawable/ash"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="540dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@drawable/monedes"></ImageView>
        <TextView
            android:id="@+id/quantitatVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/prova_monedes"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="590dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cartera"></ImageView>
        <TextView
            android:id="@+id/cartera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/prova_monedes"></TextView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/buy"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="565dp"
        android:layout_marginLeft="335dp"
        android:background="@drawable/baseline_shopping_cart_24"></ImageButton>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/pikachu"></ImageView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:background="@drawable/pikachu"></ImageView>

</FrameLayout>
